Implement improvements suggested by sonar.